# forge

./: .gitignore  LICENSE  README.md  Tiltfile  forge.example.yaml
backend/: pyproject.toml
backend/alembic/: env.py
backend/forge/: __init__.py  config.py  main.py
backend/forge/api/: gallery.py  generation.py  models.py  settings.py  system.py  ws.py
backend/forge/backends/: base.py  registry.py
backend/forge/backends/comfyui_backend/: backend.py
backend/forge/backends/demo_backend/: backend.py
backend/forge/backends/diffusers_backend/: backend.py
backend/forge/backends/onnx_backend/: backend.py
backend/forge/core/: events.py  queue.py  worker.py
backend/forge/db/: engine.py  tables.py
backend/forge/models/: manager.py
backend/forge/schemas/: __init__.py  gallery.py  generation.py  models.py  system.py
backend/forge/storage/: images.py
backend/tests/: test_api.py  test_config.py  test_events.py  test_queue.py
docs/: VISION.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: accessibility.spec.ts  gallery-page.spec.ts  generation-flow-mocked.spec.ts  generation-flow-real.spec.ts  generation-lifecycle.spec.ts  generation-page.spec.ts  models-page.spec.ts  navigation.spec.ts  settings-page.spec.ts
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/hooks/: useGenerationSubmit.ts  useWebSocket.ts
scripts/: dev.py
(+10 files in other folders)
